# ecom-ms

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  checklist.md  event-calendar-me.md  event-calender-rust-consumer.md  event-calender.md  improvement-flink-debezium  production_grade_ecommerce_microservices_spec.md
.github/: dependabot.yml
cert-dashboard-operator/: Dockerfile  Makefile  PROJECT  README.md  bundle.Dockerfile  go.mod  rebuild-deploy.sh
csrf-service/: Dockerfile  README.md  go.mod  go.sum  main.go  main_test.go
docs/: architecture-grade-a-justification.md  architecture.html  cdc-flow.md  comprehensive-platform-enhancements.md  debezium-flink-cdc.md  index.html  manual-test.md  product_document.md  restart-app.md  review-and-proposed-architecture.md  session-26-issues-and-fixes.md  session-28-stability-issues-and-fixes.md  user-guide.md
e2e/: admin.spec.ts  audit-remediation.spec.ts  auth.spec.ts  cart.spec.ts  catalog.spec.ts  cdc-hardening.spec.ts  cdc.spec.ts  cert-dashboard-screenshots.spec.ts  cert-dashboard-usermanual-screenshots.spec.ts  cert-dashboard.spec.ts  checkout.spec.ts  credentials.spec.ts  csrf-sliding-ttl.spec.ts  csrf.spec.ts  package.json  (+24 more)
inventory-service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
inventory-service/alembic/: env.py
inventory-service/alembic/versions/: 001_create_inventory.py  002_seed_inventory.py  003_create_dlq_messages.py
inventory-service/app/: config.py  database.py  main.py  tracing.py
inventory-service/app/api/: admin.py  stock.py
inventory-service/app/kafka/: consumer.py  dlq_consumer.py
inventory-service/app/middleware/: auth.py
inventory-service/app/models/: dlq_message.py  inventory.py
inventory-service/app/schemas/: inventory.py
inventory-service/k8s/: inventory-service.yaml
inventory-service/tests/: conftest.py  test_auth.py  test_consumer.py  test_health.py  test_stock.py
inventory-service/tests/integration/: conftest.py  test_stock_integration.py
(+541 files in other folders)
